# MC-MMD-rust

./: .gitignore  LICENSE  README.md  build.gradle  gradle.properties  settings.gradle
.github/workflows/: build-mod.yml
CustomMorphs/: 微笑.vpd
common/: build.gradle
common/src/main/java/com/kAIS/KAIMyEntity/: NativeFunc.java
common/src/main/java/com/shiroha/mmdskin/: MmdSkinClient.java  NativeFunc.java
common/src/main/java/com/shiroha/skinlayers3d/: NativeFunc.java  SkinLayers3D.java  (+1 more)
common/src/main/resources/: skinlayers3d-common.mixins.json
fabric/: build.gradle
fabric/src/main/resources/: fabric.mod.json  mmdskin-fabric.mixins.json
forge/: build.gradle  gradle.properties
forge/src/main/resources/: mmdskin-forge.mixins.json  pack.mcmeta
gradle/wrapper/: gradle-wrapper.properties
neoforge/: build.gradle
rust_engine/: .gitignore  Cargo.toml  build.ps1  build.sh
rust_engine/src/: lib.rs
rust_engine/src/animation/: animation_layer.rs  bezier.rs  keyframe.rs  mod.rs  motion.rs  motion_track.rs  vmd_animation.rs  vmd_file.rs  vmd_loader.rs  vpd_file.rs
rust_engine/src/jni_bridge/: animation_handle.rs  mod.rs  model_handle.rs  native_func.rs
rust_engine/src/model/: loader.rs  material.rs  mod.rs  runtime.rs  submesh.rs
rust_engine/src/morph/: manager.rs  mod.rs  morph.rs
rust_engine/src/physics/: config.rs  mmd_joint.rs  mmd_physics.rs  mmd_rigid_body.rs  mod.rs
rust_engine/src/skeleton/: bone.rs  ik_solver.rs  manager.rs  mod.rs
rust_engine/src/skinning/: mod.rs  skinning.rs
rust_engine/src/texture/: loader.rs  mod.rs
(+186 files in other folders)
