[package]
name = "mmd_engine"
version = "0.1.0"
edition = "2021"
authors = ["MMD Engine Team"]
description = "MMD Runtime Engine with JNI bindings for Minecraft"

[lib]
name = "mmd_engine"
crate-type = ["cdylib", "rlib"]

[dependencies]
# 本地依赖
mmd = { path = "deps/mmd-rs", default-features = false, features = ["arrayvec"] }
glam = { path = "deps/glam-rs", features = ["std"] }
rapier3d = { path = "deps/rapier/crates/rapier3d", default-features = false, features = ["dim3", "f32"] }
jni = "0.21"

# 外部依赖
byteorder = "1.5"
encoding_rs = "0.8"
thiserror = "2"
log = "0.4"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "tga"] }
once_cell = "1.19"
vek = "0.17"
nalgebra = "0.34"
rayon = "1.11.0"

[features]
default = []

[profile.release]
opt-level = 3
lto = true
